# Egypt-Pharaoh-Hieroglyphs

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml
Egypt_Pharaoh_Hieroglyphs/: pyproject.toml  requirements.txt
Egypt_Pharaoh_Hieroglyphs/.github/workflows/: ci.yml
Egypt_Pharaoh_Hieroglyphs/config/: logging_config.json
Egypt_Pharaoh_Hieroglyphs/dashboard/assets/: custom_styles.css  dashAgGridComponentFunctions.js  timeline_script.js
Egypt_Pharaoh_Hieroglyphs/data/: egypt_pharaohs_dynasties.csv  egypt_pharaohs_dynasties_backup.csv
Egypt_Pharaoh_Hieroglyphs/images/: 110px-GlazedFiaenceVesselFragmentNameOfAha-BritishMuseum-August21-08.jpg:Zone.Identifier  110px-PotterySherdWithNameOfSemerkhet-PetrieMuseum-August21-08.jpg:Zone.Identifier  110px-djet_Egypte_louvre_290.jpg:Zone.Identifier  setyI_5_names_proto_sequence_RaymondMonfort.jpg:Zone.Identifier
Egypt_Pharaoh_Hieroglyphs/src/: app.py  callbacks.py  config.yml  logging_setup.py  main.py  requirements.txt  utils.py
Egypt_Pharaoh_Hieroglyphs/src/assets/: custom_styles.css  dashAgGridComponentFunctions.js
Egypt_Pharaoh_Hieroglyphs/src/callbacks/: dynasty_callbacks.py  period_callbacks.py
Egypt_Pharaoh_Hieroglyphs/src/models/: pharaoh.py
Egypt_Pharaoh_Hieroglyphs/src/pages/: all_dynasties.py  all_periods.py  dynasty.py  home.py  layouts.py  not_found_404.py  period.py  timeline.py
Egypt_Pharaoh_Hieroglyphs/src/pages/all_periods/: all_periods.py
Egypt_Pharaoh_Hieroglyphs/src/services/: data_service.py  timeline_services.py
Egypt_Pharaoh_Hieroglyphs/tests/: dropdown_vis.py  test_callbacks.py  test_data_service.py  test_main_callbacks.py  test_timeline_service.py
(+23 files in other folders)
